--- a/index.html
+++ b/index.html
@@ -1,56 +1,81 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>علوش - الدخول</title>
-    <style>
-        body { background: #f4f7f6; font-family: sans-serif; margin: 0; }
-        /* صفحة الدخول */
-        #login-page { display: flex; flex-direction: column; align-items: center; padding: 50px 20px; }
-        .btn { width: 100%; max-width: 300px; padding: 15px; border-radius: 30px; border: none; font-weight: bold; cursor: pointer; margin-bottom: 10px; }
-        .btn-guest { background: #00acc1; color: white; }
-        
-        /* صفحة الشات (مخفية في البداية) */
-        #chat-page { display: none; height: 100vh; flex-direction: column; background: #000; color: #fff; }
-        .header { background: #fff; color: #00acc1; padding: 15px; text-align: center; border-bottom: 2px solid #00acc1; }
-        #msgs { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
-        .m { background: #222; padding: 10px; border-radius: 10px; border-right: 3px solid #00acc1; width: fit-content; }
-        .input-area { padding: 15px; background: #1a1a1a; display: flex; gap: 10px; }
-        input { flex: 1; padding: 10px; border-radius: 20px; border: 1px solid #00acc1; background: #000; color: #fff; }
-    </style>
-</head>
-<body>
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #f0f2f5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
 
-    <div id="login-page">
-        <h1 style="color: #00acc1;">🔥 علوش🔥</h1>
-        <button class="btn btn-guest" onclick="enterChat()">⏳ دخول الزوار</button>
-        <p style="font-size: 12px; color: #666;">عالم المحادثة العراقية بدون تعقيد</p>
-    </div>
+.chat-container {
+    width: 400px;
+    height: 500px;
+    background: white;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
 
-    <div id="chat-page">
-        <div class="header">👑 غرفة دردشة العراق العامة</div>
-        <div id="msgs">
-            <div class="m">أهلاً بك يا زائر! نورت علوش .</div>
-        </div>
-        <div class="input-area">
-            <input type="text" id="msgIn" placeholder="اكتب رسالتك...">
-            <button onclick="send()" style="background:#00acc1; color:#fff; border:none; border-radius:20px; padding:10px 20px;">إرسال</button>
-        </div>
-    </div>
+header {
+    background: #0084ff;
+    color: white;
+    padding: 15px;
+    text-align: center;
+}
 
-    <script>
-        function enterChat() {
-            document.getElementById('login-page').style.display = 'none';
-            document.getElementById('chat-page').style.display = 'flex';
-        }
-        function send() {
-            var i = document.getElementById('msgIn'), m = document.getElementById('msgs');
-            if(i.value.trim()!="") {
-                var d = document.createElement('div'); d.className='m'; d.textContent=i.value;
-                m.appendChild(d); i.value=""; m.scrollTop=m.scrollHeight;
-            }
-        }
-    </script>
-</body>
-</html>
+.chat-box {
+    flex: 1;
+    padding: 20px;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.message {
+    padding: 10px 15px;
+    border-radius: 18px;
+    max-width: 70%;
+    font-size: 14px;
+}
+
+.sent {
+    background: #0084ff;
+    color: white;
+    align-self: flex-end;
+    border-bottom-right-radius: 2px;
+}
+
+.received {
+    background: #e4e6eb;
+    color: black;
+    align-self: flex-start;
+    border-bottom-left-radius: 2px;
+}
+
+.input-area {
+    padding: 15px;
+    border-top: 1px solid #ddd;
+    display: flex;
+    gap: 10px;
+}
+
+input {
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 20px;
+    outline: none;
+}
+
+button {
+    background: #0084ff;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+}
