--- a/index.html
+++ b/index.html
@@ -2,191 +2,205 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>شات شيلة - النسخة الاحترافية</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>شات البرنس | لوحة التحكم الكاملة</title>
     <style>
+        :root {
+            --main-gold: #ff9800;
+            --dark-bg: #121212;
+            --panel-bg: #1e1e1e;
+            --text-gray: #b0b0b0;
+        }
+
         * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Tahoma', sans-serif; }
-        body { background: #000; color: #ccc; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
+        body { background: var(--dark-bg); color: #fff; height: 100vh; overflow: hidden; }
 
-        /* شريط الإعلانات المتحرك (الخبر) */
-        .news-bar {
-            background: #222;
-            border-bottom: 1px solid #ff9800;
-            color: #ff9800;
-            padding: 5px;
-            font-size: 13px;
-            white-space: nowrap;
-            overflow: hidden;
+        /* --- صفحة الدخول --- */
+        #login-page {
+            display: flex; justify-content: center; align-items: center; height: 100vh;
+            background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url('https://shilah.site/s-img/bg.jpg');
+            background-size: cover;
         }
-        .news-content { display: inline-block; animation: scroll 20s linear infinite; }
-        @keyframes scroll { from { transform: translateX(-100%); } to { transform: translateX(100%); } }
+        .login-box {
+            background: rgba(30, 30, 30, 0.9); padding: 30px; border-radius: 10px;
+            border: 1px solid var(--main-gold); width: 350px; text-align: center;
+        }
+        .login-box input {
+            width: 100%; padding: 12px; margin: 15px 0; background: #000;
+            border: 1px solid #444; color: #fff; border-radius: 5px; text-align: center;
+        }
+        .btn-entry {
+            background: var(--main-gold); color: #000; border: none;
+            padding: 10px 30px; font-weight: bold; cursor: pointer; border-radius: 5px; width: 100%;
+        }
 
-        /* الهيدر العلوي */
+        /* --- واجهة الشات الرئيسية --- */
+        #chat-interface { display: none; height: 100vh; flex-direction: column; }
+
         header {
-            background: linear-gradient(180deg, #444 0%, #000 100%);
-            padding: 10px 15px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            border-bottom: 1px solid #333;
+            background: #000; padding: 10px 15px; border-bottom: 2px solid var(--main-gold);
+            display: flex; justify-content: space-between; align-items: center;
         }
 
-        .main-container { display: flex; flex: 1; overflow: hidden; }
+        .main-content { display: flex; flex: 1; overflow: hidden; }
 
-        /* قائمة الأسماء - Sidebar */
-        .sidebar {
-            width: 240px;
-            background: #151515;
-            border-left: 1px solid #333;
-            display: flex;
-            flex-direction: column;
+        /* قائمة المتصلين على اليمين */
+        .online-list {
+            width: 250px; background: var(--panel-bg); border-left: 1px solid #333;
+            display: flex; flex-direction: column;
         }
-        .sidebar-tab {
-            background: #252525;
-            padding: 10px;
-            text-align: center;
-            color: #ff9800;
-            font-weight: bold;
-            border-bottom: 2px solid #ff9800;
+        .list-header { background: #252525; padding: 10px; text-align: center; color: var(--main-gold); border-bottom: 1px solid #444; }
+        
+        .user-row {
+            padding: 10px; border-bottom: 1px solid #2a2a2a; display: flex; align-items: center;
+            cursor: pointer; transition: 0.3s;
         }
-        .user-list { flex: 1; overflow-y: auto; padding: 5px; }
-        .user-item {
-            padding: 6px 10px;
-            border-bottom: 1px solid #222;
-            display: flex;
-            align-items: center;
-            font-size: 13px;
-            cursor: pointer;
-        }
-        .user-item:hover { background: #333; }
-        .user-item img { width: 16px; margin-left: 8px; } /* أيقونة التاج أو الرتبة */
+        .user-row:hover { background: #333; }
+        .user-row .status-dot { width: 10px; height: 10px; background: #2ecc71; border-radius: 50%; margin-left: 10px; }
 
-        /* منطقة الشات */
-        .chat-area { flex: 1; display: flex; flex-direction: column; background: #0a0a0a; }
-        #chat-view {
-            flex: 1;
-            padding: 15px;
-            overflow-y: auto;
-            background-image: url('https://www.transparenttextures.com/patterns/black-linen.png');
-        }
+        /* ساحة الرسائل */
+        .chat-view { flex: 1; display: flex; flex-direction: column; background: #000; }
+        #messages-box { flex: 1; padding: 20px; overflow-y: auto; background: url('https://shilah.site/s-img/bg_chat.png'); }
 
-        /* تنسيق رسالة الشات */
-        .msg { margin-bottom: 10px; border-bottom: 1px solid #1a1a1a; padding-bottom: 5px; display: flex; align-items: flex-start; }
-        .m-time { font-size: 10px; color: #666; margin-left: 8px; margin-top: 4px; }
+        .msg-line { margin-bottom: 12px; font-size: 14px; border-bottom: 1px solid #1a1a1a; padding-bottom: 5px; }
         .m-name { font-weight: bold; margin-left: 5px; cursor: pointer; }
-        .m-text { color: #fff; word-break: break-all; }
 
-        /* منطقة الإدخال وأدوات الزخرفة */
-        .input-box { background: #202020; padding: 10px; border-top: 1px solid #ff9800; }
-        .tools { display: flex; gap: 5px; margin-bottom: 8px; flex-wrap: wrap; }
-        .tools button, .tools select {
-            background: #333;
-            border: 1px solid #444;
-            color: #fff;
-            padding: 3px 7px;
-            font-size: 11px;
-            cursor: pointer;
-            border-radius: 3px;
-        }
-        .tools button:hover { background: #444; border-color: #ff9800; }
+        /* صندوق الكتابة */
+        .input-panel { background: #1e1e1e; padding: 15px; border-top: 1px solid var(--main-gold); }
+        .admin-controls { display: flex; gap: 10px; margin-bottom: 10px; }
+        .admin-btn { background: #333; color: var(--main-gold); border: 1px solid #555; padding: 4px 8px; font-size: 11px; cursor: pointer; }
 
-        .write-panel { display: flex; gap: 8px; }
-        #text-in {
-            flex: 1;
-            background: #000;
-            border: 1px solid #444;
-            color: #ff9800; /* لون الكتابة المعتاد في هذه الشاتات */
-            padding: 12px;
-            border-radius: 5px;
-            outline: none;
-            font-size: 15px;
+        /* --- الملف الشخصي (Popup) --- */
+        .profile-card {
+            position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);
+            background: var(--panel-bg); border: 2px solid var(--main-gold);
+            width: 300px; padding: 20px; border-radius: 10px; display: none; z-index: 1000; text-align: center;
         }
-        .send-btn {
-            background: linear-gradient(180deg, #ffb347 0%, #ff9800 100%);
-            border: none;
-            color: #000;
-            padding: 0 25px;
-            font-weight: bold;
-            border-radius: 5px;
-            cursor: pointer;
+        .profile-card img { width: 80px; height: 80px; border-radius: 50%; border: 2px solid var(--main-gold); }
+        .close-profile { position: absolute; top: 10px; left: 10px; cursor: pointer; color: red; }
+
+        /* منيو تحكم المدير */
+        #admin-menu {
+            position: absolute; background: #252525; border: 1px solid var(--main-gold);
+            display: none; z-index: 2000; border-radius: 5px; width: 150px;
         }
+        #admin-menu button {
+            width: 100%; padding: 10px; background: none; border: none; color: white;
+            text-align: right; cursor: pointer; border-bottom: 1px solid #333;
+        }
+        #admin-menu button:hover { background: var(--main-gold); color: #000; }
     </style>
 </head>
 <body>
 
-    <div class="news-bar">
-        <div class="news-content">مرحباً بكم في شات شيلة .. يمنع منعاً باتاً تداول الروابط الخارجية .. نتمنى لكم أطيب الأوقات معنا ..</div>
+    <div id="login-page">
+        <div class="login-box">
+            <h2 style="color: var(--main-gold);">شات البرنس</h2>
+            <input type="text" id="nickname" placeholder="أدخل اسمك المستعار">
+            <button class="btn-entry" onclick="enterChat()">دخول الشات</button>
+        </div>
     </div>
 
-    <header>
-        <div style="color: #ff9800; font-weight: bold;">SHILAH CHAT</div>
-        <div class="header-btns">
-            <button style="background:none; border:1px solid #555; color:#ccc; padding:4px 10px; cursor:pointer;">دخول الأعضاء</button>
-            <button style="background:none; border:1px solid #555; color:#ccc; padding:4px 10px; cursor:pointer;">اتصل بنا</button>
-        </div>
-    </header>
+    <div id="chat-interface">
+        <header>
+            <div style="color: var(--main-gold); font-weight: bold;">لوحة تحكم المدير</div>
+            <div id="my-profile-btn" onclick="showProfile('أنا')" style="cursor:pointer;">👤 ملفي الشخصي</div>
+        </header>
 
-    <div class="main-container">
-        <div class="sidebar">
-            <div class="sidebar-tab">المتواجدون (3)</div>
-            <div class="user-list">
-                <div class="user-item"><img src="https://img.icons8.com/color/48/crown.png"> <span style="color: red; font-weight: bold;">الزمردة (مديرة)</span></div>
-                <div class="user-item"><img src="https://img.icons8.com/color/48/filled-star.png"> <span style="color: #00ccff;">صقر العرب</span></div>
-                <div class="user-item"><img src="https://img.icons8.com/color/48/user.png"> <span>زائر 707</span></div>
-            </div>
-        </div>
-
-        <div class="chat-area">
-            <div id="chat-view">
-                <div class="msg">
-                    <span class="m-time">02:15 م</span>
-                    <span class="m-name" style="color:red;">[Admin] الزمردة:</span>
-                    <span class="m-text">أهلاً بك يا زائر في غرفتنا.</span>
+        <div class="main-content">
+            <div class="online-list">
+                <div class="list-header">المتصلون الآن</div>
+                <div id="users-container">
+                    <div class="user-row" onclick="openAdminMenu(event, 'زائر 1')"><span class="status-dot"></span> زائر 1</div>
+                    <div class="user-row" onclick="openAdminMenu(event, 'سارة')"><span class="status-dot"></span> سارة</div>
                 </div>
             </div>
 
-            <div class="input-box">
-                <div class="tools">
-                    <button><b>B</b></button>
-                    <button><i>I</i></button>
-                    <button><u>U</u></button>
-                    <select><option>لون الخط</option><option style="color:red">أحمر</option><option style="color:blue">أزرق</option></select>
-                    <button>الزخرفة</button>
-                    <button>الابتسامات</button>
-                    <button>إرسال صورة</button>
+            <div class="chat-view">
+                <div id="messages-box">
+                    <div class="msg-line"><span style="color:var(--main-gold)">[نظام]:</span> أهلاً بك في غرفتك الخاصة يا مدير.</div>
                 </div>
-                
-                <div class="write-panel">
-                    <input type="text" id="text-in" placeholder="اكتب رسالتك هنا..." autocomplete="off">
-                    <button class="send-btn" id="send-btn">إرسال</button>
+
+                <div class="input-panel">
+                    <div class="admin-controls">
+                        <button class="admin-btn" onclick="clearChat()">🗑️ مسح الشات</button>
+                        <button class="admin-btn">📢 إعلان عام</button>
+                        <button class="admin-btn">🔒 قفل الغرفة</button>
+                    </div>
+                    <div style="display:flex; gap:10px;">
+                        <input type="text" id="msg-input" placeholder="اكتب رسالتك..." style="flex:1; padding:12px; background:#000; border:1px solid #444; color:#00ff00; outline:none;">
+                        <button class="btn-entry" style="width:100px;" onclick="send()">إرسال</button>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
+
+    <div id="profileCard" class="profile-card">
+        <span class="close-profile" onclick="this.parentElement.style.display='none'">X</span>
+        <img src="https://via.placeholder.com/80" alt="Avatar">
+        <h3 id="p-name" style="margin:10px 0;">الاسم</h3>
+        <p style="font-size:12px; color:var(--text-gray);">الحالة: متصل</p>
+        <hr style="margin:10px 0; border:0; border-top:1px solid #444;">
+        <p>الرتبة: <span style="color:red;">مدير الموقع</span></p>
+    </div>
+
+    <div id="admin-menu">
+        <button onclick="alert('تم الطرد')">طرد</button>
+        <button onclick="alert('تم الباند')">باند نهائي</button>
+        <button onclick="showProfile(window.selectedUser)">عرض البروفايل</button>
+        <button onclick="alert('تم كتم الصوت')">كتم (Mute)</button>
     </div>
 
     <script>
-        const input = document.getElementById('text-in');
-        const btn = document.getElementById('send-btn');
-        const view = document.getElementById('chat-view');
-
-        function pushMsg() {
-            const val = input.value.trim();
-            if(!val) return;
-
-            const time = new Date().toLocaleTimeString('ar-EG', {hour: '2-digit', minute:'2-digit'});
-            const msgHtml = `
-                <div class="msg">
-                    <span class="m-time">${time}</span>
-                    <span class="m-name" style="color:#ff9800;">زائر:</span>
-                    <span class="m-text">${val}</span>
-                </div>
-            `;
-            view.insertAdjacentHTML('beforeend', msgHtml);
-            input.value = '';
-            view.scrollTop = view.scrollHeight;
+        // وظيفة الدخول
+        function enterChat() {
+            const name = document.getElementById('nickname').value;
+            if(name.trim() === "") return alert("يرجى إدخال اسم");
+            document.getElementById('login-page').style.display = 'none';
+            document.getElementById('chat-interface').style.display = 'flex';
         }
 
-        btn.onclick = pushMsg;
-        input.onkeypress = (e) => { if(e.key === 'Enter') pushMsg(); };
+        // إرسال رسالة
+        function send() {
+            const input = document.getElementById('msg-input');
+            const box = document.getElementById('messages-box');
+            if(!input.value.trim()) return;
+
+            const html = `<div class="msg-line"><span class="m-name" style="color:red;">[المدير]:</span> <span style="color:#00ff00;">${input.value}</span></div>`;
+            box.insertAdjacentHTML('beforeend', html);
+            input.value = '';
+            box.scrollTop = box.scrollHeight;
+        }
+
+        // مسح الشات
+        function clearChat() {
+            document.getElementById('messages-box').innerHTML = '<div class="msg-line">[نظام]: تم مسح السجل بواسطة المدير.</div>';
+        }
+
+        // منيو المدير
+        function openAdminMenu(e, name) {
+            e.preventDefault();
+            window.selectedUser = name;
+            const menu = document.getElementById('admin-menu');
+            menu.style.display = 'block';
+            menu.style.top = e.pageY + 'px';
+            menu.style.left = e.pageX + 'px';
+        }
+
+        // عرض البروفايل
+        function showProfile(name) {
+            document.getElementById('p-name').innerText = name;
+            document.getElementById('profileCard').style.display = 'block';
+            document.getElementById('admin-menu').style.display = 'none';
+        }
+
+        // إغلاق المنيو عند الضغط خارجاً
+        window.onclick = function(event) {
+            if (!event.target.matches('.user-row')) {
+                document.getElementById('admin-menu').style.display = 'none';
+            }
+        }
     </script>
 </body>
 </html>
