--- a/index.html
+++ b/index.html
@@ -3,36 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>MASTER RG - Global Bot</title>
+    <title>MASTER RG - ULTIMATE FIX</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@700&display=swap" rel="stylesheet">
     <style>
-        :root { --neon: #00f2ff; --gold: #ffd700; --red: #ff4444; --bg: #000; }
+        :root { --neon: #00f2ff; --gold: #ffd700; --bg: #000; }
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
-        body { margin: 0; background: var(--bg); color: #fff; font-family: 'Cairo', sans-serif; overflow: hidden; position: fixed; width: 100%; height: 100%; }
+        body { margin: 0; background: #000; color: #fff; font-family: 'Cairo', sans-serif; overflow: hidden; position: fixed; width: 100%; height: 100%; }
 
-        header { height: 60px; background: #111; border-bottom: 2px solid var(--neon); display: flex; justify-content: space-between; align-items: center; padding: 0 15px; z-index: 100; }
-        .page { position: fixed; inset: 0; background: var(--bg); display: none; z-index: 10; }
+        .page { position: fixed; inset: 0; background: #000; display: none; z-index: 10; }
         .page.active { display: block; }
 
+        header { height: 60px; background: #111; border-bottom: 2px solid var(--neon); display: flex; justify-content: space-between; align-items: center; padding: 0 15px; }
         .lobby-container { display: grid; grid-template-columns: 1fr 1fr; gap: 12px; padding: 15px; overflow-y: auto; height: calc(100vh - 60px); }
         .room-card { background: #111; padding: 15px; border-radius: 12px; border: 1px solid #333; text-align: center; cursor: pointer; }
 
         .chat-area { position: absolute; top: 60px; left: 0; right: 0; bottom: 80px; overflow-y: auto; padding: 10px; background: #050505; }
-        .msg { display: flex; margin-bottom: 12px; }
-        .msg img { width: 42px; height: 42px; border-radius: 8px; border: 2px solid #222; margin-left: 10px; }
-        .user-n { font-size: 13px; font-weight: bold; }
-        .user-t { background: #1a1a1a; padding: 10px; border-radius: 12px; max-width: 85%; line-height: 1.4; word-wrap: break-word; }
-        .bot-msg { border: 1px solid var(--gold) !important; background: #2a2200 !important; color: var(--gold); }
+        .msg { display: flex; margin-bottom: 15px; }
+        .msg img { width: 42px; height: 42px; border-radius: 8px; border: 2px solid #222; margin-left: 10px; object-fit: cover; }
+        .user-t { background: #1a1a1a; padding: 10px; border-radius: 12px; max-width: 85%; line-height: 1.4; }
+        .yt-frame { width: 100%; aspect-ratio: 16/9; margin-top: 10px; border-radius: 8px; border: 1px solid var(--neon); }
 
-        .footer { position: absolute; bottom: 0; left: 0; right: 0; height: 80px; background: #111; display: flex; align-items: center; padding: 15px; border-top: 1px solid #222; }
-        #msgInp { flex: 1; background: #000; border: 1px solid #333; color: #fff; padding: 12px; border-radius: 10px; text-align: right; }
-        .send-btn { background: var(--neon); color: #000; border: none; padding: 10px 15px; border-radius: 10px; margin-right: 8px; font-weight: bold; }
-
-        /* القائمة الجانبية */
         .sidebar { position: fixed; top: 0; bottom: 0; right: -300px; width: 280px; background: #0a0a0a; z-index: 2000; padding: 20px; transition: 0.3s; border-left: 2px solid var(--neon); }
         .sidebar.active { right: 0; }
+        .footer { position: absolute; bottom: 0; left: 0; right: 0; height: 80px; background: #111; display: flex; align-items: center; padding: 10px; }
+        #msgInp { flex: 1; background: #000; border: 1px solid #333; color: #fff; padding: 12px; border-radius: 10px; text-align: right; }
         #overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.8); z-index: 1500; display: none; }
     </style>
 </head>
@@ -40,41 +36,38 @@
 
 <div id="lobby-page" class="page active">
     <header>
-        <button onclick="toggleSidebar()" style="background:var(--neon); border:none; padding:7px 12px; border-radius:8px; font-weight:bold;">☰ القائمة</button>
+        <button onclick="toggleSidebar()" style="background:var(--neon); border:none; padding:7px 12px; border-radius:8px; font-weight:bold;">القائمة</button>
         <b style="color:var(--neon)">MASTER RG 👑</b>
-        <div style="width:60px"></div>
+        <div style="width:50px"></div>
     </header>
     <div class="lobby-container">
         <div class="room-card" onclick="openRoom('main', '👑 العرش')">🏛 العرش</div>
         <div class="room-card" onclick="openRoom('game', '🏆 المسابقات')">🏆 المسابقات</div>
         <div class="room-card" onclick="openRoom('vip', '💎 الديوان')">💎 الديوان</div>
         <div class="room-card" onclick="openRoom('elite', '🤝 النخبة')">🤝 النخبة</div>
-        <div class="room-card" onclick="openRoom('poem', '🎸 الشعر')">🎸 الشعر</div>
-        <div class="room-card" onclick="openRoom('cafe', '☕ المقهى')">☕ المقهى</div>
     </div>
 </div>
 
 <div id="chat-page" class="page">
     <header>
-        <button onclick="goBack()" style="background:none; border:none; color:var(--neon); font-size:22px;">➔</button>
-        <b id="room-name-display" style="color:var(--gold);"></b>
-        <div id="online-btn" style="color:var(--neon); font-size:12px;">● 0</div>
+        <button onclick="goBack()" style="background:none; border:none; color:var(--neon); font-size:20px;">➔</button>
+        <b id="room-name-display"></b>
+        <div id="online-btn" style="font-size:11px; color:var(--neon)">0 متصل</div>
     </header>
     <div id="chat-messages" class="chat-area"></div>
     <div class="footer">
-        <input type="text" id="msgInp" placeholder="اكتب 'سؤال' لتحدي البوت...">
-        <button onclick="sendMsg()" class="send-btn">إرسال</button>
+        <input type="text" id="msgInp" placeholder="رسالة، رابط يوتيوب، أو 'سؤال'..">
+        <button onclick="sendMsg()" style="background:var(--neon); border:none; padding:10px 15px; border-radius:10px; font-weight:bold; margin-right:5px;">إرسال</button>
     </div>
 </div>
 
 <div id="overlay" onclick="toggleSidebar()"></div>
 <div id="sidebar" class="sidebar">
     <h4 style="color:var(--neon)">👤 الملف الشخصي</h4>
-    <div id="my-info" style="font-size:13px; margin-bottom:20px;">
-        الاسم: <span id="my-name-val" style="color:var(--gold)"></span><br>
-        المستوى: <span id="my-lv-val" style="color:var(--neon)"></span>
-    </div>
-    <button onclick="localStorage.clear(); location.reload();" style="width:100%; padding:10px; background:red; border:none; color:white; border-radius:8px;">خروج</button>
+    <p id="my-n-disp" style="color:var(--gold)"></p>
+    <hr>
+    <h4 style="color:var(--gold)">🟢 المتواجدون الآن</h4>
+    <div id="user-list-box"></div>
 </div>
 
 <script>
@@ -82,81 +75,67 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    let my = {
-        n: localStorage.getItem('rg-n') || "",
-        xp: parseInt(localStorage.getItem('rg-xp')) || 0,
-        i: "https://ui-avatars.com/api/?background=333&color=fff&name=U"
-    };
+    let my = { n: localStorage.getItem('rg-n') || "", xp: parseInt(localStorage.getItem('rg-xp')) || 0 };
+    if(!my.n) { let name = prompt("ادخل اسمك:"); if(name){ localStorage.setItem('rg-n', name); location.reload(); } }
+    document.getElementById('my-n-disp').innerText = "الاسم: " + my.n;
 
-    if(!my.n) {
-        let name = prompt("ادخل اسمك:");
-        if(name) { localStorage.setItem('rg-n', name); location.reload(); }
+    let currentRoom = "", currentAnswer = "";
+    const questions = [{q:"عاصمة العراق؟", a:"بغداد"}, {q:"2+2*2؟", a:"6"}, {q:"أكبر كوكب؟", a:"المشتري"}];
+
+    // نظام المتصلين
+    function presence() {
+        let ref = db.ref('online_users/' + my.n);
+        ref.set({ n: my.n }); ref.onDisconnect().remove();
+        db.ref('online_users').on('value', snap => {
+            let box = document.getElementById('user-list-box'); box.innerHTML = "";
+            let count = 0;
+            snap.forEach(u => { count++; box.innerHTML += `<div style="padding:5px;">● ${u.val().n}</div>`; });
+            document.getElementById('online-btn').innerText = count + " متصل";
+        });
     }
-    document.getElementById('my-name-val').innerText = my.n;
-    document.getElementById('my-lv-val').innerText = Math.floor(my.xp / 50) + 1;
+    presence();
 
-    let currentRoom = "";
-    let currentAnswer = "";
+    function getYT(url) {
+        const reg = /^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=)([^#\&\?]*).*/;
+        const match = url.match(reg); return (match && match[2].length === 11) ? match[2] : null;
+    }
 
-    const questions = [
-        { q: "ما هي عاصمة العراق؟", a: "بغداد" },
-        { q: "من هو مؤسس الدولة الأموية؟", a: "معاوية" },
-        { q: "ما هو أسرع حيوان في العالم؟", a: "الفهد" },
-        { q: "كم عدد أركان الإسلام؟", a: "5" },
-        { q: "ما هو الشيء الذي يكسو الناس وهو عارٍ؟", a: "الابرة" }
-    ];
-
-    function openRoom(roomId, roomName) {
-        currentRoom = roomId;
-        document.getElementById('room-name-display').innerText = roomName;
+    function openRoom(id, name) {
+        currentRoom = id; document.getElementById('room-name-display').innerText = name;
         document.getElementById('lobby-page').classList.remove('active');
         document.getElementById('chat-page').classList.add('active');
-        loadMessages();
+        loadMsgs();
     }
 
     function sendMsg() {
-        let t = document.getElementById('msgInp').value.trim();
-        if(!t) return;
-
-        if (currentAnswer !== "" && t === currentAnswer) {
-            db.ref('rooms/' + currentRoom).push({ u: "🤖 بوت الإمبراطورية", t: `👑 كفو يا ${my.n}! جوابك صح [${t}]. زادت نقاطك!`, isBot: true });
-            my.xp += 10;
-            localStorage.setItem('rg-xp', my.xp);
+        let t = document.getElementById('msgInp').value.trim(); if(!t) return;
+        if (currentAnswer && t === currentAnswer) {
+            db.ref('rooms/'+currentRoom).push({ u: "🤖 البوت", t: "✅ صح! كفو يا " + my.n, bot: true });
             currentAnswer = "";
-        } else if (t === "سؤال" || t === "بوت") {
-            let q = questions[Math.floor(Math.random() * questions.length)];
+        } else if (t === "سؤال") {
+            let q = questions[Math.floor(Math.random()*questions.length)];
             currentAnswer = q.a;
-            db.ref('rooms/' + currentRoom).push({ u: "🤖 بوت الإمبراطورية", t: `💡 سؤال للجميع: ${q.q}`, isBot: true });
+            db.ref('rooms/'+currentRoom).push({ u: "🤖 البوت", t: "🤔 سؤال: " + q.q, bot: true });
         } else {
-            db.ref('rooms/' + currentRoom).push({ u: my.n, t: t, i: my.i, lv: Math.floor(my.xp/50)+1 });
+            db.ref('rooms/'+currentRoom).push({ u: my.n, t: t });
         }
-        document.getElementById('msgInp').value = '';
+        document.getElementById('msgInp').value = "";
     }
 
-    function loadMessages() {
-        db.ref('rooms/' + currentRoom).off();
-        let box = document.getElementById('chat-messages');
-        box.innerHTML = "";
-        db.ref('rooms/' + currentRoom).limitToLast(25).on('child_added', snap => {
-            let m = snap.val();
-            let div = document.createElement('div');
-            div.className = 'msg';
-            div.innerHTML = `
-                <img src="${m.isBot ? 'https://cdn-icons-png.flaticon.com/512/4712/4712035.png' : m.i}">
-                <div>
-                    <div class="user-n" style="color:${m.isBot?'var(--gold)':'var(--neon)'}">${m.u} ${m.lv?`[Lv.${m.lv}]`:''}</div>
-                    <div class="user-t ${m.isBot?'bot-msg':''}">${m.t}</div>
-                </div>`;
-            box.appendChild(div);
-            box.scrollTop = box.scrollHeight;
+    function loadMsgs() {
+        db.ref('rooms/'+currentRoom).off();
+        let box = document.getElementById('chat-messages'); box.innerHTML = "";
+        db.ref('rooms/'+currentRoom).limitToLast(30).on('child_added', snap => {
+            let m = snap.val(); let yt = getYT(m.t);
+            let div = document.createElement('div'); div.className = 'msg';
+            let content = `<div class="user-t">${m.t}${yt ? `<iframe class="yt-frame" src="https://www.youtube.com/embed/${yt}" frameborder="0" allowfullscreen></iframe>` : ''}</div>`;
+            div.innerHTML = `<img src="https://ui-avatars.com/api/?name=${m.u}&background=333&color=fff"><div><b style="color:${m.bot?'var(--gold)':'var(--neon)'}">${m.u}</b>${content}</div>`;
+            box.appendChild(div); box.scrollTop = box.scrollHeight;
         });
     }
 
-    function goBack() { document.getElementById('chat-page').classList.remove('active'); document.getElementById('lobby-page').classList.add('active'); }
-    function toggleSidebar() { 
-        document.getElementById('sidebar').classList.toggle('active');
-        document.getElementById('overlay').style.display = document.getElementById('sidebar').classList.contains('active') ? 'block' : 'none';
-    }
+    function goBack() { document.querySelectorAll('.page').forEach(p=>p.classList.remove('active')); document.getElementById('lobby-page').classList.add('active'); }
+    function toggleSidebar() { let s = document.getElementById('sidebar'); s.classList.toggle('active'); document.getElementById('overlay').style.display = s.classList.contains('active') ? 'block' : 'none'; }
 </script>
 </body>
 </html>
